--- a/public/app/views/home.html
+++ b/public/app/views/home.html
@@ -1,109 +1,71 @@
-<div data-alert class="alert-box success radius">
-	<p>Someone has bid on your enquiry!</p>
-	<p>Click <a href="enquiry.html">here</a> to view the bid.</p>
-</div>
-<div class="large-2 columns">
-	<form>
-		<div class="form-group">
-			<label>Brand</label>
-			<input type="text" class="form-control" name="brand">
-		</div>
-		<div class="form-group">
-			<label>Model</label>
-			<input type="text" class="form-control" name="model">
-		</div>
-		<div class="form-group">
-			<label>Colour</label>
-			<select>
-				<option>Black</option>
-				<option>Blue</option>
-				<option>Silver</option>
-			</select>
-		</div>
-		<div class="form-group">
-			<label>Age</label>
-			<input type="text" class="form-control" name="age">
-		</div>
-		<div class="form-group">
-			<label>Milage</label>
-			<input type="text" class="form-control" name="milage">
-		</div>
-	</form>
-</div>
-<div class="large-10 columns">
-	<table>
-	
-		<thead>
-			<tr>
-				<td>Brand</td>
-				<td>Model</td>
-				<td>Colour</td>
-				<td>Age</td>
-				<td>Milage</td>
-				<td>Asking Price</td>
-				<td>Your Bid</td>
-				<td></td>
-			</tr>	
-		</thead>
-		<tbody>
-			<tr>
-				<td>Ford</td>
-				<td>Mondeo</td>
-				<td>Black</td>
-				<td>2 Years Old</td>
-				<td>25000</td>
-				<td>$5000</td>
-				<td><input type="text" class="form-control" name="milage"></td>
-				<td><button type="submit" class="">Place Bid</button></td>
-			</tr>	
-			<tr>
-				<td>Ford</td>
-				<td>Mondeo</td>
-				<td>Black</td>
-				<td>2 Years Old</td>
-				<td>25000</td>
-				<td>$5000</td>
-				<td><input type="text" class="form-control" name="milage"></td>
-				<td><button type="submit" class="">Place Bid</button></td>
-			</tr>	
-			<tr>
-				<td>Ford</td>
-				<td>Mondeo</td>
-				<td>Black</td>
-				<td>2 Years Old</td>
-				<td>25000</td>
-				<td>$5000</td>
-				<td><input type="text" class="form-control" name="milage"></td>
-				<td><button type="submit" class="">Place Bid</button></td>
-			</tr>	
-			<tr>
-				<td>Ford</td>
-				<td>Mondeo</td>
-				<td>Black</td>
-				<td>2 Years Old</td>
-				<td>25000</td>
-				<td>$5000</td>
-				<td><input type="text" class="form-control" name="milage"></td>
-				<td><button type="submit" class="">Place Bid</button></td>
-			</tr>	
-			<tr>
-				<td>Ford</td>
-				<td>Mondeo</td>
-				<td>Black</td>
-				<td>2 Years Old</td>
-				<td>25000</td>
-				<td>$5000</td>
-				<td><input type="text" class="form-control" name="milage"></td>
-				<td><button type="submit" class="">Place Bid</button></td>
-			</tr>	
-		</tbody>
-	</table>
-</div>	
-<div class="large-2">
-	<label>Car</label>
-	<select>
-		<option>My first car</option>
-		<option>Shitty car noone wants to buy</option>
-		<option>Stolen car</option>
-	</select>
+<div ng-controller="HomeCtrl">
+	<div data-alert class="alert-box success radius">
+		<p>Someone has bid on your enquiry!</p>
+		<p>Click <a href="enquiry.html">here</a> to view the bid.</p>
+	</div>
+	<div class="large-2 columns">
+		<form>
+			<div class="form-group">
+				<label>Brand</label>
+				<input type="text" class="form-control" name="brand">
+			</div>
+			<div class="form-group">
+				<label>Model</label>
+				<input type="text" class="form-control" name="model">
+			</div>
+			<div class="form-group">
+				<label>Colour</label>
+				<select>
+					<option>Black</option>
+					<option>Blue</option>
+					<option>Silver</option>
+				</select>
+			</div>
+			<div class="form-group">
+				<label>Age</label>
+				<input type="text" class="form-control" name="age">
+			</div>
+			<div class="form-group">
+				<label>Milage</label>
+				<input type="text" class="form-control" name="milage">
+			</div>
+		</form>
+	</div>
+	<div class="large-10 columns">
+		<table>
+		
+			<thead>
+				<tr>
+					<td>Brand</td>
+					<td>Model</td>
+					<td>Colour</td>
+					<td>Age</td>
+					<td>Milage</td>
+					<td>Asking Price</td>
+					<td>Your Bid</td>
+					<td></td>
+				</tr>	
+			</thead>
+			<tbody>
+				<tr ng-repeat="enquiry in enquiries">
+					<td>{{enquiry.Brand}}</td>
+					<td>{{enquiry.Model}}</td>
+					<td>{{enquiry.Colour}}</td>
+					<td>{{enquiry.Age}} Years Old</td>
+					<td>{{enquiry.Milage}}</td>
+					<td>{{enquiry.AskingPrice}}</td>
+					<td><input type="text" class="form-control" name="milage"></td>
+					<td><button type="submit" class="">Place Bid</button></td>
+				</tr>		
+			</tbody>
+		</table>
+	</div>	
+	<div class="large-2">
+		<label>Car</label>
+		<select>
+			<option>My first car</option>
+			<option>Shitty car noone wants to buy</option>
+			<option>Stolen car</option>
+		</select>
+	</div>
 </div>
