--- a/public/app/views/login.html
+++ b/public/app/views/login.html
@@ -1,21 +1,22 @@
-<div class="row">
-<h1>Reverse Car Bay</h1>
+<div ng-controller="LoginCtrl"><div class="row">
+	<h1>Reverse Car Bay</h1>
 	<h2>Sign In</h2>
-
-	<form action="/login" method="post">
-		<div class="form-group">
-			<label>Email</label>
-			<input type="text" class="form-control" name="email">
+	{{formData.username}}
+	<form>
+	
+		<div class="simple-form form-group">
+			<label>Username</label>
+			<input ng-model="formData.username" type="text">
 		</div>
 		<div class="form-group">
 			<label>Password</label>
-			<input type="password" class="form-control" name="password">
+			<input ng-model="formData.password" type="password">
 		</div>
 
-		<button type="submit" class="btn btn-warning btn-lg">Login</button>
+		<button ng-click="poop(formData)" class="btn btn-warning btn-lg">Login</button>
 	</form>
 
 	<hr>
 
-<p>Need an account? <a href="/sign-up.html">Signup</a></p>
+<!--<p>Need an account? <a href="/sign-up.html">Signup</a></p>-->
 </div>
