--- a/public/app/views/login.html
+++ b/public/app/views/login.html
@@ -12,7 +12,7 @@
 			<input ng-model="formData.password" type="password">
 		</div>
 
-		<button ng-click="poop(formData)" class="btn btn-warning btn-lg">Login</button>
+		<button ng-click="doLogin(formData)" class="btn btn-warning btn-lg">Login</button>
 	</form>
 
 	<hr>
