Add feature for calculating price and giving information about no bids yet

--- a/public/app/views/enquiry.html
+++ b/public/app/views/enquiry.html
@@ -55,8 +55,8 @@
 			</tr>	
 		</thead>
 		<tbody>
-			<tr ng-repeat-start="enquiry in enquiries | filter:{user_id:getUserID()}">
-				<td>{{enquiry.brand_name}}</td>
+			<tr ng-repeat-start="(id, enquiry) in enquiries | filter:{user_id:getUserID()}">
+				<td>{{enquiry.enquiry_id}} {{enquiry.brand_name}}</td>
 				<td>{{enquiry.model_name}}</td>
 				<td>{{enquiry.color}}</td>
 				<td>{{enquiry.age}}</td>
@@ -67,24 +67,21 @@
 				<!--<td><input type="checkbox"></td> -->
 				<td>{{numberOfBids(enquiry.enquiry_id)}}</td>
 				<td><input type="hidden" ng-model="from.on_enquiry_id">
-				<button ng-hide="enquiry.accepted_bid_id" class="" ng-click="showBidsForEnquiry(enquiry.enquiry_id)">View Bids</button>
+				<button ng-hide="enquiry.accepted_bid_id" class="" ng-click="showBidsForEnquiry(enquiries[id].enquiry_id)">View Bids</button>
 				<label ng-show="enquiry.accepted_bid_id" style="text-align:center;"><b>Sold</b></label></td>
 			</tr>
-			<tr ng-show='enquiry.enquiry_id == selectedEnquiry' ng-repeat="bid in bids | filter:{on_enquiry_id:enquiry.enquiry_id}">
+			<tr ng-repeat-end ng-show='enquiry.enquiry_id == selectedEnquiry' ng-repeat="bid in bids | filter:{on_enquiry_id:enquiries[id].enquiry_id}">
 				<td></td>
-				<td><em>Bid amount: {{(bid.bid_amount)*1.05}}</em></td>
+				<td><em>{{bid.on_enquiry_id}}Bid amount: {{(bid.bid_amount)*1.05}}</em></td>
 				<!--<td><em>Location: {{enquiry.accepted_bid_id}}</em></td> -->
 				<!--<td><em>Accept bid: </em><input type="checkbox"></td>-->
 				<td><form>
 					<input type="hidden" ng-model="bidForm.user_id" ng-init="bidForm.user_id = getUserID()" />
-					<input type="hidden" ng-model="bidForm.enquiry_id" ng-init="bidForm.enquiry_id = enquiry.enquiry_id" />
+					<input type="hidden" ng-model="bidForm.enquiry_id" ng-init="bidForm.enquiry_id = enquiries[id].enquiry_id" />
 					<input type="hidden" ng-model="bidForm.accepted_bid_id" ng-init="bidForm.accepted_bid_id = bid.bid_id" />
 					<button type="submit" class="" ng-click="acceptBid(bidForm)">Accept bid</button></form>
 				</td>
 			</tr>
-			<tr ng-repeat-end>
-      			<td></td>
- 			</tr>
 	
 		</tbody>
 	</table>
