--- a/public/app/views/home.html
+++ b/public/app/views/home.html
@@ -1,32 +1,26 @@
 <div ng-controller="HomeCtrl">
-	<div data-alert class="alert-box success radius">
+	<!--div data-alert class="alert-box success radius">
 		<p>Someone has bid on your enquiry!</p>
 		<p>Click <a href="enquiry.html">here</a> to view the bid.</p>
-	</div>
-
-					
+	</div-->
 		<div class="large-3 columns">
+			<h3>Filter Enquires</h3>
 			<label>Brand</label>
-			<input type="text" name="brand" ng-model="search.Brand">
+			<input type="text" name="brand" ng-model="search.brand_name">
 					
 			<label>Model</label>
-			<input type="text" name="model" ng-model="search.Model">
+			<input type="text" name="model" ng-model="search.model_name">
 		
 			<label>Colour</label>
-			<select  ng-model="search.Colour">
+			<select  ng-model="search.color">
+				<option></option>
 				<option>Black</option>
 				<option>Blue</option>
 				<option>Silver</option>
 			</select>
-		
-			<label>Age</label>
-			<input type="text" name="age" ng-model="search.Age">
-		
-			<label>Milage</label>
-			<input type="text" name="milage" ng-model="search.Milage">
-
 		</div>
-	<div class="large-10 columns">
+	<div class="large-8 columns">
+		<h2 ng-hide="placeBid">Available Enquires</h2>
 		<table ng-hide="placeBid">
 			<thead>
 				<tr>
@@ -36,18 +30,23 @@
 					<td>Age</td>
 					<td>Milage</td>
 					<td>Asking Price</td>
+					<td>Number of bids</td>
 					<td></td>
 				</tr>	
 			</thead>
 			<tbody>
-				<tr ng-repeat="(id, enquiry) in enquiries | filter: search">
+				<tr ng-repeat="(id, enquiry) in enquiries | filter: search | orderBy:'-enquiry_id' | limitTo:10" ng-class="highlight:true=">
 					<td>{{enquiry.brand_name}}</td>
 					<td>{{enquiry.model_name}}</td>
 					<td>{{enquiry.color}}</td>
 					<td>{{getAgeFromYear(enquiry.from_year)}} Years Old</td>
 					<td>{{enquiry.milage}}</td>
 					<td>{{enquiry.target_price}}</td>
-					<td><button class="" ng-click="showPlaceBid(enquiries[id])">Place Bid</button></td>
+					<td>
+						Number of bids: {{numberOfBids(enquiry.enquiry_id)}}<br />
+						Lowest bid: {{lowestBid(enquiry.enquiry_id)}}
+					</td>
+					<td><button class="" ng-click="showPlaceBid(enquiry)">Place Bid</button></td>
 				</tr>		
 			</tbody>
 		</table>
@@ -62,6 +61,7 @@
 						<td>Age</td>
 						<td>Milage</td>
 						<td>Asking Price</td>
+						<td>Bids</td>
 					</tr>
 				</thead>
 				<tbody>
@@ -72,13 +72,17 @@
 						<td>{{getAgeFromYear(bidEnquiry.from_year)}} Years Old</td>
 						<td>{{bidEnquiry.milage}}</td>
 						<td>{{bidEnquiry.target_price}}</td>
+						<td>
+							Number of bids: {{numberOfBids(bidEnquiry.enquiry_id)}}<br />
+							Lowest bid: {{lowestBid(bidEnquiry.enquiry_id)}}
+						</td>
 					</tr>
 				</tbody>
 			</table>
 			<form>
-				<input placeholder="Bid amount" type="text" class="form-control" ng-model="bidForm.bid_amount" /><br />
+				<input placeholder="Bid amount" type="number" max="{{lowestBid(bidEnquiry.enquiry_id)}}" class="form-control" ng-model="bidForm.bid_amount" /><br />
 				<button ng-click="doPlaceBid(bidForm, bidEnquiry.enquiry_id)"> Confirm Bid </button>
-				<button ng-click="hidePlaceBid()"> Cancel Bid </button>
+				<button ng-click="hidePlaceBid()"> Return </button>
 			</form>
 		</div>
 	</div>
