Fix problem with the list of enquiries.

--- a/public/app/views/enquiry.html
+++ b/public/app/views/enquiry.html
@@ -68,12 +68,12 @@
 				<!--<td><input type="checkbox"></td> -->
 				<td>{{numberOfBids(enquiry.enquiry_id)}}</td>
 				<td><input type="hidden" ng-model="from.on_enquiry_id">
-				<button ng-hide="enquiry.accepted_bid_id" class="" ng-click="showBidsForEnquiry(enquiries[id].enquiry_id)">View Bids</button>
+				<button ng-hide="enquiry.accepted_bid_id" class="" ng-click="showBidsForEnquiry(enquiry.enquiry_id)">View Bids</button>
 				<label ng-show="enquiry.accepted_bid_id" style="text-align:center;"><b>Sold</b></label></td>
 			</tr>
-			<tr ng-repeat-end ng-show='enquiries[id].enquiry_id == selectedEnquiry' ng-repeat="bid in bids | filter:{on_enquiry_id:enquiries[id].enquiry_id}:true">
+			<tr ng-repeat-end ng-show='enquiry.enquiry_id == selectedEnquiry' ng-repeat="bid in bids | filter:{on_enquiry_id:enquiry.enquiry_id}:true | orderBy:'bid_amount'">
 				<td></td>
-				<td><em> {{bid.bid_id}} Bid amount: {{(bid.bid_amount)*1.05}}</em></td>
+				<td><em> Bid amount: {{(bid.bid_amount)*1.05}}</em></td>
 				<!--<td><em>Location: {{enquiry.accepted_bid_id}}</em></td> -->
 				<!--<td><em>Accept bid: </em><input type="checkbox"></td>-->
 				<td>
