Fix problem with enquiries

--- a/public/app/views/enquiry.html
+++ b/public/app/views/enquiry.html
@@ -69,7 +69,7 @@
 				<td>{{numberOfBids(enquiry.enquiry_id)}}</td>
 				<td><input type="hidden" ng-model="from.on_enquiry_id">
 				<button ng-hide="enquiry.accepted_bid_id" class="" ng-click="showBidsForEnquiry(enquiry.enquiry_id)">View Bids</button>
-				<label ng-show="enquiry.accepted_bid_id" style="text-align:center;"><b>Sold</b></label></td>
+				<label ng-show="enquiry.accepted_bid_id" style="text-align:center;"><b>Ended</b></label></td>
 			</tr>
 			<tr ng-repeat-end ng-show='enquiry.enquiry_id == selectedEnquiry' ng-repeat="bid in bids | filter:{on_enquiry_id:enquiry.enquiry_id}:true | orderBy:'bid_amount'">
 				<td></td>
