Add sign-up page and update TODO.

--- a/public/app/views/login.html
+++ b/public/app/views/login.html
@@ -17,5 +17,5 @@
 
 	<hr>
 
-<!--<p>Need an account? <a href="/sign-up.html">Signup</a></p>-->
+	<p>Need an account? <a href="#/sign-up">Signup</a></p>
 </div>
