--- a/public/app/views/sign-up.html
+++ b/public/app/views/sign-up.html
@@ -1,26 +1,26 @@
-<div class="row">
+<div ng-controller="SignUpCtrl" class="row">
 
 	<div class="">
 	<h1>Reverse Car Bay</h1>
 		<h2>Signup</h2>
 
-		<form action="/sign-up" method="post">
+		<form>
 			<div class="">
-				<label>Email</label>
-				<input type="email" class="" name="email">
+				<label>Username</label>
+				<input type="text" class="" ng-model="form.username">
 			</div>
 			<div class="">
 				<label>Password</label>
-				<input type="password" class="" name="password">
+				<input type="password" class="" ng-model="form.password">
 			</div>
 
-			<button type="submit" class="">Register</button>
+			<button ng-click="doSignUp(form)">Register</button>
 		</form>
 
 		<hr>
 
-		<p>Already have an account? <a href="/login.html">Login</a></p>
-		<p>Or go <a href="/">home</a>.</p>
+		<p>Already have an account? <a href="#/login">Login</a></p>
+		<p>Or go <a href="#/home">home</a>.</p>
 
 	</div>
 </div>
