--- a/public/app/views/login.html
+++ b/public/app/views/login.html
@@ -1,8 +1,20 @@
 <div ng-controller="LoginCtrl"><div class="row">
-	<h1>Reverse Car Bay</h1>
-	<h2>Sign In</h2>
+	<img class="large-3 column" src="img/mario.svg" alt="">
+	<h1 class="large-6 column">Reverse Car Bay</h1>
+	<img class="large-3 column" src="img/luigi.svg" alt="">
+	<hr>
+	<div class="row">
+		<div class="large-6 column">
+			<div ng-show="LoginFail" data-alert class="alert-box">
+			<h1>Sorry!!</h1>
+			Those user details are incorrect! <br />
+			New to Reverse Car Bay? 
+			<h5><a href="#/signup" class="sign-up">Sign up here.</a></h5>
+			<a ng-click="hideWarn()" href="" class="close">&times;</a> </div>
+		</div>	
+	</div>
 	<form>
-	
+		<h2>Sign In</h2>
 		<div class="simple-form form-group">
 			<label>Username</label>
 			<input ng-model="formData.username" type="text">
