Fix problem with sorting the bids from lowest to highest

--- a/public/app/views/enquiry.html
+++ b/public/app/views/enquiry.html
@@ -83,5 +83,7 @@
 	
 		</tbody>
 	</table>
+ {{cars}}
+	<button type="submit" class="" ng-click="parseToNumeric('bids', ['bid_amount'])">Test</button>
 </div>	
 </div>	
