--- a/public/app/views/login.html
+++ b/public/app/views/login.html
@@ -1,6 +1,17 @@
 <div ng-controller="LoginCtrl"><div class="row">
 	<h1>Reverse Car Bay</h1>
 	<h2>Sign In</h2>
+
+	<div class="row">
+	<div class="large-6 column">
+		<div ng-show="LoginFail" data-alert class="alert-box">
+			<h1  class="sign-up">Sorry!!</h1>
+			Those user details are incorrect! <br />
+			New to Reverse Car Bay? 
+			<h5 class="sign-up"><a href="#/sign-up" >Sign up here.</a></h5>
+			<a ng-click="hideWarn()" href="" class="close">&times;</a> </div>
+		</div>	
+	</div>
 	<form>
 	
 		<div class="simple-form form-group">
