--- a/public/app/views/enquiry.html
+++ b/public/app/views/enquiry.html
@@ -1,4 +1,4 @@
-<div class="large-3 columns">
+<div class="medium-3 large-3 columns">
 	<h2>Add new enquiry</h2>
 	<form>
 		<div class="form-group">
@@ -37,7 +37,7 @@
 	</form>
 </div>
 
-<div class="large-7 columns">
+<div class="medium-9 large-7 columns">
 	<h2>Your enquires</h2>
 	<table>
 	
