--- a/public/app/views/home.html
+++ b/public/app/views/home.html
@@ -3,7 +3,8 @@
 		<p>Someone has bid on your enquiry!</p>
 		<p>Click <a href="enquiry.html">here</a> to view the bid.</p>
 	</div-->
-		<div class="large-3 columns">
+<div class="row">
+	<div class="medium-3 large-3 columns">
 			<h3>Filter Enquires</h3>
 			<label>Brand</label>
 			<input type="text" name="brand" ng-model="search.brand_name">
@@ -19,40 +20,9 @@
 				<option>Silver</option>
 			</select>
 		</div>
-	<div class="large-8 columns">
-		<h2 ng-hide="placeBid">Available Enquires</h2>
-		<table ng-hide="placeBid">
-			<thead>
-				<tr>
-					<td>Brand</td>
-					<td>Model</td>
-					<td>Colour</td>
-					<td>Age</td>
-					<td>Milage</td>
-					<td>Asking Price</td>
-					<td>Number of bids</td>
-					<td ng-show="user.isLogged"></td>
-				</tr>	
-			</thead>
-			<tbody>
-				<tr ng-repeat="(id, enquiry) in enquiries | filter: search | orderBy:'-enquiry_id'| filter:{'user_id':getUserID()}:false" ng-class="highlight:true=">
-					<td>{{enquiry.brand_name}}</td>
-					<td>{{enquiry.model_name}}</td>
-					<td>{{enquiry.color}}</td>
-					<td>{{getAgeFromYear(enquiry.from_year)}} Years Old</td>
-					<td>{{enquiry.milage}}</td>
-					<td>{{enquiry.target_price}}</td>
-					<td>
-						Number of bids: {{numberOfBids(enquiry.enquiry_id)}}<br />
-						Lowest bid: {{lowestBid(enquiry.enquiry_id)}}
-					</td>
-					<td ng-show="user.isLogged"><button class="" ng-click="showPlaceBid(enquiry)">Place Bid</button></td>
-				</tr>		
-			</tbody>
-		</table>
-		<div ng-show="placeBid">
-			<h2>Place Bid</h2>
-			<table>
+		<div class="medium-9 large-8 columns">
+			<h2 ng-hide="placeBid">Available Enquires</h2>
+			<table ng-hide="placeBid">
 				<thead>
 					<tr>
 						<td>Brand</td>
@@ -61,30 +31,63 @@
 						<td>Age</td>
 						<td>Milage</td>
 						<td>Asking Price</td>
-						<td>Bids</td>
-					</tr>
+						<td>Number of bids</td>
+						<td ng-show="user.isLogged"></td>
+					</tr>	
 				</thead>
 				<tbody>
-					<tr>
-						<td>{{bidEnquiry.brand_name}}</td>
-						<td>{{bidEnquiry.model_name}}</td>
-						<td>{{bidEnquiry.color}}</td>
-						<td>{{getAgeFromYear(bidEnquiry.from_year)}} Years Old</td>
-						<td>{{bidEnquiry.milage}}</td>
-						<td>{{bidEnquiry.target_price}}</td>
+					<tr ng-repeat="(id, enquiry) in enquiries | filter: search | orderBy:'-enquiry_id'| filter:{'user_id':getUserID()}:false" ng-class="highlight:true=">
+						<td>{{enquiry.brand_name}}</td>
+						<td>{{enquiry.model_name}}</td>
+						<td>{{enquiry.color}}</td>
+						<td>{{getAgeFromYear(enquiry.from_year)}} Years Old</td>
+						<td>{{enquiry.milage}}</td>
+						<td>{{enquiry.target_price}}</td>
 						<td>
-							Number of bids: {{numberOfBids(bidEnquiry.enquiry_id)}}<br />
-							Lowest bid: {{lowestBid(bidEnquiry.enquiry_id)}}
+							Number of bids: {{numberOfBids(enquiry.enquiry_id)}}<br />
+							Lowest bid: {{lowestBid(enquiry.enquiry_id)}}
 						</td>
-					</tr>
+						<td ng-show="user.isLogged"><button class="" ng-click="showPlaceBid(enquiry)">Place Bid</button></td>
+					</tr>		
 				</tbody>
 			</table>
-			<form name="bidForm" novalidate ng-submit="bidForm.$valid && !bidForm.$pristine && doPlaceBid(bidForm, bidEnquiry.enquiry_id)">
-				<div ng-show="!bidForm.$pristine && !bidForm.$valid"> Invalid bid amount! </div>
-				<input placeholder="Bid amount" type="number" min="0" required max="{{lowestBid(bidEnquiry.enquiry_id)}}" class="form-control" ng-model="bidForm.bid_amount" /><br />
-				<button type="submit"> Confirm Bid </button>
-				<button ng-click="hidePlaceBid()"> Return </button>
-			</form>
+			<div ng-show="placeBid">
+				<h2>Place Bid</h2>
+				<table>
+					<thead>
+						<tr>
+							<td>Brand</td>
+							<td>Model</td>
+							<td>Colour</td>
+							<td>Age</td>
+							<td>Milage</td>
+							<td>Asking Price</td>
+							<td>Bids</td>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>{{bidEnquiry.brand_name}}</td>
+							<td>{{bidEnquiry.model_name}}</td>
+							<td>{{bidEnquiry.color}}</td>
+							<td>{{getAgeFromYear(bidEnquiry.from_year)}} Years Old</td>
+							<td>{{bidEnquiry.milage}}</td>
+							<td>{{bidEnquiry.target_price}}</td>
+							<td>
+								Number of bids: {{numberOfBids(bidEnquiry.enquiry_id)}}<br />
+								Lowest bid: {{lowestBid(bidEnquiry.enquiry_id)}}
+							</td>
+						</tr>
+					</tbody>
+				</table>
+				<form name="bidForm" novalidate ng-submit="bidForm.$valid && !bidForm.$pristine && doPlaceBid(bidForm, bidEnquiry.enquiry_id)">
+					<div ng-show="!bidForm.$pristine && !bidForm.$valid"> Invalid bid amount! </div>
+					<input placeholder="Bid amount" type="number" min="0" required max="{{lowestBid(bidEnquiry.enquiry_id)}}" class="form-control" ng-model="bidForm.bid_amount" /><br />
+					<button type="submit"> Confirm Bid </button>
+					<button ng-click="hidePlaceBid()"> Return </button>
+				</form>
+			</div>
 		</div>
+	</div>
 	</div>
 </div>
