Fix some problems with the my enquiries view.

--- a/public/app/styles/app.css
+++ b/public/app/styles/app.css
@@ -13,3 +13,10 @@ input.ng-dirty.ng-invalid,select.ng-dirty.ng-invalid
 {
 	border-color: Red;
 }
+
+.acceptBid
+{
+  margin-left: 20px;
+  margin-right: 100px;
+  padding: 8px;
+}
