--- a/public/app/views/enquiry.html
+++ b/public/app/views/enquiry.html
@@ -61,7 +61,7 @@
 				<td>{{enquiry.brand_name}}</td>
 				<td>{{enquiry.model_name}}</td>
 				<td>{{enquiry.color}}</td>
-				<td>{{enquiry.age}}</td>
+				<td>{{getAgeFromYear(enquiry.from_year)}} Years Old</td>
 				<td>{{enquiry.milage}}</td>
 				<td>{{enquiry.target_price}}</td>
 				<!--<td><a href="view-bids.html">New!</a></td>
@@ -84,13 +84,10 @@
 				</td>
 			</tr>
 			<tr ng-repeat-end ng-show='enquiry.enquiry_id == selectedEnquiry' ng-repeat="bid in bids | filter:{on_enquiry_id:enquiry.enquiry_id}:true | orderBy:'bid_amount'">
-				<td></td>
-				<td><em> Bid amount: <b>{{(bid.bid_amount)*1.05}} ¥</b> (Price includes {{(bid.bid_amount)*0.05}} ¥ in service fee)</em></td>
+				<td colspan="8"><div class="acceptBid"><em> Bid amount: <b>{{(bid.bid_amount)*1.05}} ¥</b> (Price includes {{(bid.bid_amount)*0.05}} ¥ in service fee)</em>
 				<!--<td><em>Location: {{enquiry.accepted_bid_id}}</em></td> -->
 				<!--<td><em>Accept bid: </em><input type="checkbox"></td>-->
-				<td>
-					<button type="submit" class="" ng-click="acceptBid(bid.bid_id, bid.on_enquiry_id)">Accept bid</button>
-				</td>
+				<button type="submit" class="right" ng-click="acceptBid(bid.bid_id, bid.on_enquiry_id)">Accept bid</button></div></td>
 			</tr>
 	
 		</tbody>
