--- a/public/app/views/view-bids.html
+++ b/public/app/views/view-bids.html
@@ -1,4 +1,4 @@
-<div class="large-6 columns">
+<div class="medium-5 large-6 columns">
 	<h2>Your active bids</h2>
 	<table>
 	
@@ -22,14 +22,14 @@
 				<td>{{enquiry.color}}</td>
 				<td>{{enquiry.age}}</td>
 				<td>{{enquiry.milage}}</td>
-				<td>{{bid.bid_amount}}</td>
+				<td>¥{{bid.bid_amount}}</td>
 			</tr>
 	
 		</tbody>
 	</table>
 </div>
 
-<div class="large-6 columns">
+<div class="medium-5 large-6 columns">
 	<h2>Your purchases</h2>
 	<table>
 	
@@ -53,7 +53,7 @@
 				<td>{{enquiry.color}}</td>
 				<td>{{enquiry.age}}</td>
 				<td>{{enquiry.milage}}</td>
-				<td>{{bid.bid_amount}}</td>
+				<td>¥{{bid.bid_amount}}</td>
 			</tr>
 	
 		</tbody>
