Fix the transitions between the slideshow and the app.

--- a/public/app/views/enquiry.html
+++ b/public/app/views/enquiry.html
@@ -77,7 +77,7 @@
 					<input type="hidden" ng-model="from.on_enquiry_id">
 					<button ng-hide="enquiry.accepted_bid_id" class="right" ng-click="showBidsForEnquiry(enquiry.enquiry_id)">View Bids</button>
 					<!-- *** ADD LINK TO PRESENTATION -->
-					<div class="right"><a class="button" ng-show="enquiry.accepted_bid_id" href="/slideshow">Pay</a></div>
+					<div class="right"><a class="button" ng-show="enquiry.accepted_bid_id" href="/slideshow/#/3">Pay</a></div>
 				</td>
 			</tr>
 			<tr ng-repeat-end ng-show='enquiry.enquiry_id == selectedEnquiry' ng-repeat="bid in bids | filter:{on_enquiry_id:enquiry.enquiry_id}:true | orderBy:'bid_amount'">
